--- a/src/modules/Login.css
+++ b/src/modules/Login.css
@@ -46,7 +46,6 @@
   }
 
   .form{
-    font-size: 20px;
     position: absolute;
     width: 0px;
     height: 0px;
@@ -57,6 +56,7 @@
   }
 
   input {
+    font-size: 20px;
     padding: 10px 20px;
     border-radius: 10px;
     border: 0;
@@ -124,8 +124,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: black;
     background-color: white;
     overflow: hidden;
+    white-space: nowrap;
 
     width: 0px;
     left: 100%;
@@ -178,7 +180,8 @@
       /* width: var(--max-w); */
       width: 100%;
       left: 0;
-      background-color: #5136ff;
+      /* color: white;
+      background-color: #5136ff; */
     }
   }
 
